# badgesniff

./: .gitignore  README.md
badgesniff-ruby/: Gemfile  README.md
badgesniff-ruby/lib/: badgesniff.rb
badgesniff-ruby/lib/badgesniff/: badge_io.rb  packet.rb  pcap.rb  pcapng.rb  sniffer.rb  ui.rb  writer.rb
badgesniff-ruby/lib/badgesniff/badge_io/: buspirate.rb  direct_serial.rb
firmware/: CMakeLists.txt  badgesniff.c  tcb.hex
